products and shared added

--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,12 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link data-require="bootstrap-css@3.3.6" data-semver="3.3.6" rel="stylesheet">
+
+  <script src="https://use.fontawesome.com/127ae591ef.js"></script>
+
 </head>
 <body>
-  <app-root></app-root>
+  <app-pm></app-pm>
 </body>
 </html>
